# figments

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
examples/: rainbows.rs  rainbows_spi.rs
figments/: Cargo.toml  README.md
figments-esp32-examples/: Cargo.toml  wokwi.toml
figments-esp32-examples/.cargo/: config.toml
figments-esp32-idf-examples/: Cargo.toml  README.md
figments-esp32-idf-examples/.cargo/: config.toml
figments-esp32-ws2812-dma/: Cargo.toml
figments-esp32-ws2812-dma/src/: lib.rs
figments-render/: Cargo.toml  README.md
figments-render/src/: gamma.rs  lib.rs  output.rs  power.rs  smart_leds.rs
figments-sample-shaders/: Cargo.toml  README.md
figments-sample-shaders/src/: lib.rs
figments/src/: atomics.rs  geometry.rs  lib.rs  mappings.rs  pixbuf.rs  pixels.rs  prelude.rs  render.rs  surface.rs
figments/src/liber8tion/: interpolate.rs  mod.rs  noise.rs  rhythm.c  rhythm.rs  sin_table.rs  trig.rs
figments/src/mappings/: embedded_graphics.rs  linear.rs  mod.rs  stride.rs
src/: buffers.rs  geometry.rs  lib.rs  mappings.rs  pixbuf.rs  prelude.rs  render.rs  surface.rs
src/figments/: buffers.rs  mappings.rs  mod.rs  power.rs  render.rs
src/liber8tion/: interpolate.rs  mod.rs  noise.rs  rhythm.rs  trig.rs
