[package]
name = "figments"
description = "A high performance graphics API for microcontrollers"
readme = "README.md"
repository = "https://github.com/tdfischer/figments"
keywords = ["ws2812", "esp32", "smart-leds", "embedded-graphics"]
categories = ["graphics", "embedded", "rendering::engine"]
version = "0.0.2"
authors = ["tdfischer"]
edition = "2021"
resolver = "2"
rust-version = "1.77"
license = "LGPL-2.1-or-later"

[lib]
name = "figments"

[[example]]
name = "rainbows"
required-features = ["esp32-examples"]


[[example]]
name = "rainbows_spi"
required-features = ["esp32-examples"]

[features]
alloc = ["dep:ringbuf"]
esp32-examples = ["dep:ws2812-esp32-rmt-driver", "espidf", "dep:smart-leds", "dep:running-average", "dep:log", "ws2812-spi/mosi_idle_high"]
espidf = ["esp-idf-svc/binstart", "esp-idf-svc/native", "esp-idf-svc/alloc"]

[dependencies]
rgb = "0.8"
num = "0.4"

# alloc
ringbuf = { version = "0.4.7", optional = true }

# Examples
smart-leds = { version = "0.4.0", optional = true }
ws2812-esp32-rmt-driver = { version = "0.10.0", features = ["smart-leds-trait"], optional = true }
esp-idf-svc = { version = "0.49", default-features = false, features = ["binstart", "native", "alloc"], optional = true }
running-average = { version = "0.1.0", optional = true }
log = { version = "0.4", default-features = false, optional = true }
ws2812-spi = { version = "0.5.0", optional = true }

[build-dependencies]
embuild = "0.32.0"
anyhow = "1"
