[package]
name = "figments-esp32-examples"
version = "0.1.0"
authors = ["tdfischer"]
edition = "2021"
license = "LGPL-2.1-or-later"
default-run = "rainbow"

[features]
default = ["esp32s3"]
esp32c3 = ["esp-backtrace/esp32c3", "esp-hal/esp32c3", "esp-println/esp32c3"]
esp32s3 = ["esp-backtrace/esp32s3", "esp-hal/esp32s3", "esp-println/esp32s3", "esp-hal-smartled/esp32s3"]

[dependencies]
esp-backtrace = { version = "0.15", features = [
    "exception-handler",
    "panic-handler",
    "println",
]}

esp-hal = { version = "1.0.0-beta.0", features = [
    "unstable",
] }
esp-hal-smartled = { git = "https://github.com/esp-rs/esp-hal-community.git" }
esp-println = { version = "0.13", features = ["log"] }
log = { version = "0.4.26" }
smart-leds = "0.4.0"
figments = { path = "../figments" }
figments-render = { path = "../figments-render" }
rgb = "0.8.50"
