[package]
name = "figments-esp32-examples"
version = "0.1.0"
authors = ["tdfischer"]
edition = "2021"
license = "LGPL-2.1-or-later"
default-run = "rainbow"

[features]
default = ["esp32s3"]
esp32c3 = ["esp-backtrace/esp32c3", "esp-hal/esp32c3", "esp-println/esp32c3"]
esp32s3 = ["esp-backtrace/esp32s3", "esp-hal/esp32s3", "esp-println/esp32s3", "esp-hal-smartled/esp32s3"]

[dependencies]
esp-backtrace = { version = "0.18", features = [
    "panic-handler",
    "println",
]}

esp-hal = { version = "1.0.0", features = [
  "log-04",
  "unstable",
] }
esp-hal-smartled = { version = "0.17" }
esp-println = { version = "0.16", features = ["log-04"] }
log = { version = "0.4.26" }
smart-leds = "0.4.0"
figments = { path = "../figments", features = ["log-04"] }
figments-render = { path = "../figments-render", features = ["log-04"] }
rgb = "0.8"