[package]
name = "figments-esp32-examples"
version = "0.1.0"
authors = ["tdfischer"]
edition = "2021"
license = "LGPL-2.1-or-later"
default-run = "rainbow"

[features]
default = ["esp32s3"]
esp32 = ["esp-backtrace/esp32", "esp-hal/esp32", "esp-println/esp32", "esp-hal-smartled/esp32", "esp-bootloader-esp-idf/esp32", "esp-rtos/esp32"]
esp32c3 = ["esp-backtrace/esp32c3", "esp-hal/esp32c3", "esp-println/esp32c3", "esp-hal-smartled/esp32c3", "esp-bootloader-esp-idf/esp32c3", "esp-rtos/esp32c3"]
esp32s3 = ["esp-backtrace/esp32s3", "esp-hal/esp32s3", "esp-println/esp32s3", "esp-hal-smartled/esp32s3", "esp-bootloader-esp-idf/esp32s3", "esp-rtos/esp32s3"]

[dependencies]
esp-backtrace = { version = "0.18", features = [
    "panic-handler",
    "println",
]}

esp-hal = { version = "1.0.0", features = [
  "log-04",
  "unstable",
] }
esp-hal-smartled = { version = "0.17" }
esp-println = { version = "0.16", features = ["log-04"] }
log = { version = "0.4.26" }
smart-leds = "0.4.0"
figments = { version = "0.0.3", path = "../figments", features = ["log-04", "alloc"] }
figments-render = { version = "0.0.3", path = "../figments-render", features = ["log-04"] }
figments-sample-shaders = { path = "../figments-sample-shaders", version = "0.1", features = ["micromath"] }
rgb = "0.8"
esp-alloc = "0.9.0"
esp-bootloader-esp-idf = { version = "0.4.0", features = ["log-04"] }
esp-rtos = { version = "0.2.0", features = ["esp-alloc", "embassy", "log-04"] }
embassy-executor = { version = "0.9.1", features = ["log"] }
embassy-time = { version = "0.5.0", features = ["log"] }
static_cell = "2.1.1"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 'z'
overflow-checks  = false
