[package]
name = "figments-render"
description = "A high performance graphics hardware control API for microcontrollers"
readme = "README.md"
repository = "https://github.com/tdfischer/figments"
keywords = ["ws2812", "esp32", "smart-leds", "embedded-graphics"]
categories = ["graphics", "embedded", "rendering::engine"]
version = "0.0.2"
authors = ["tdfischer"]
edition = "2021"
resolver = "2"
rust-version = "1.77"
license = "LGPL-2.1-or-later"

[lib]
name = "figments_render"

[features]
default = ["smart-leds", "micromath"]
smart-leds = ["dep:smart-leds-trait"]
micromath = ["dep:micromath"]

[dependencies]
rgb = "0.8"
figments = { path = "../figments" }
smart-leds-trait = { version = "0.3", optional = true }
micromath = { version = "2.1.0", optional = true }