[package]
name = "figments-render"
description = "A high performance graphics hardware control API for microcontrollers"
readme = "README.md"
repository = "https://github.com/tdfischer/figments"
keywords = ["ws2812", "esp32", "smart-leds", "embedded-graphics"]
categories = ["graphics", "embedded", "rendering::engine"]
version = "0.0.3"
authors = ["tdfischer"]
edition = "2021"
resolver = "2"
rust-version = "1.77"
license = "LGPL-2.1-or-later"

[lib]
name = "figments_render"

[features]
default = ["smart-leds", "micromath"]
smart-leds = ["dep:smart-leds-trait"]
micromath = ["dep:micromath"]
log-04 = ["dep:log"]

[dependencies]
rgb = "0.8"
figments = { version = "0.0.3", path = "../figments" }
smart-leds-trait = { version = "0.3", optional = true }
micromath = { version = "2.1.0", optional = true }
log = { version = "0.4", optional = true }