[package]
name = "figments"
description = "A high performance graphics API for microcontrollers"
readme = "README.md"
repository = "https://github.com/tdfischer/figments"
keywords = ["ws2812", "esp32", "smart-leds", "embedded-graphics"]
categories = ["graphics", "embedded", "rendering::engine"]
version = "0.0.2"
authors = ["tdfischer"]
edition = "2021"
resolver = "2"
rust-version = "1.77"
license = "LGPL-2.1-or-later"

[lib]
name = "figments"

[features]
default = []
alloc = ["dep:ringbuf"]

[dependencies]
rgb = "0.8"
num = "0.4"

# alloc
ringbuf = { version = "0.4.7", optional = true }
