[package]
name = "figments"
description = "A high performance graphics API for microcontrollers"
readme = "README.md"
repository = "https://github.com/tdfischer/figments"
keywords = ["ws2812", "esp32", "smart-leds", "embedded-graphics"]
categories = ["graphics", "embedded", "rendering::engine"]
version = "0.0.2"
authors = ["tdfischer"]
edition = "2021"
resolver = "2"
rust-version = "1.77"
license = "LGPL-2.1-or-later"

[lib]
name = "figments"

[features]
default = []
std = ["ringbuf/std", "alloc"]
alloc = ["ringbuf/alloc"]
embedded-graphics = ["dep:embedded-graphics"]
log-04 = ["dep:log"]

[dependencies]
rgb = "0.8"
num = { version = "0.4", default-features = false }
embedded-graphics = { version = "0.8", optional = true }

log = { version = "0.4", optional = true }

# alloc
ringbuf = { version = "0.4.8", default_features = false, features = ["portable-atomic"] }
spin = { version  = "0.10.0", features = ["portable-atomic", "fair_mutex"] }
portable-atomic = { version = "1.11.1", features = ["critical-section"] }
critical-section = "1.2.0"